public/css/custom.css
/* fixing buttons */

.btn.focus, .btn:focus{
    box-shadow: none;
}

.btn:hover{
    color:#757e8d;
}
.btn {
    font-weight:600;
    color:#fff;
    font-size:smaller;
}

/*fixing drop-down menu*/
.dropdown-menu{
    margin: 1.125em 0 0;
}

.dropdown-item{
    font-size:smaller;
}

/*body css*/

body{
    background-color: #202b3c;
}

/*container*/
@media(min-width:1200px){
    .container {
        max-width: 100% !important;
    }
}

